# meta

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README_MSVC.txt  config.toml
include/meta/sequence/crf/: lib_wrapper.h
src/: CMakeLists.txt
src/analyzers/: CMakeLists.txt
src/analyzers/tokenizers/: CMakeLists.txt
src/io/: CMakeLists.txt
src/sequence/: CMakeLists.txt
src/sequence/crf/: CMakeLists.txt  lib_wrapper.cpp
src/sequence/crf/tools/: CMakeLists.txt  pos_tag.cpp
src/utf/: CMakeLists.txt
src/util/: CMakeLists.txt
tests/: CMakeLists.txt
